--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,40 +15,148 @@ $navBar: #1a466e;
 $background: #d1d1d1;
 $text: #858585;
 
-body{
-  font-family: 'Roboto Condensed';
-  background-color: $background;
-  color: $text;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.table{
-  color: $text;
+body {
+    font-family: 'Roboto Condensed';
+    background-color: $background;
+    color: $text;
 }
 
-td{
-  vertical-align: middle;
+.bg-image {
+    background-image: url("../../public/img/background.webp");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-th{
-  vertical-align: middle;
+.table {
+    color: $text;
 }
 
-.navbar{
-  margin-bottom: 2rem;
+td {
+    vertical-align: middle;
 }
 
-.bg-dark-blue{
-  background-color: $navBar;
+th {
+    vertical-align: middle;
 }
 
-.modal-header{
-  border-bottom: 0;
+.navbar {
+    margin-bottom: 2rem;
 }
 
-.modal-footer{
-  border-top: 0;
+.bg-dark-blue {
+    background-color: $navBar;
 }
 
-h1{
-  margin-bottom: 0;
+.modal-header {
+    border-bottom: 0;
+}
+
+.modal-footer {
+    border-top: 0;
+}
+
+h1 {
+    margin-bottom: 0;
+}
+
+.wrapper {
+    margin-top: 5rem;
+    display: grid;
+    grid-gap: 25px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    width: 100%;
+}
+
+.help-button {
+    font-size: 25px;
+    display: flex-column;
+    padding: 3rem;
+    color: #00000050;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.help-button i {
+    font-size: 130px;
+}
+
+.help-button:hover {
+    box-shadow: 3px;
+    background-color: #1a456ee1;
+    display: flex;
+    padding: 2rem;
+    color: #ffffff80;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.one {
+    color: #ffffff90;
+    background-color: #c9191995;
+    grid-column: 1/4;
+    grid-row: 1;
+}
+
+.two {
+    color: #ffffff90;
+    background-color: #df9e1195;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.three {
+    color: #ffffff90;
+    background-color: #798b10a1;
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.four {
+    color: #ffffff90;
+    background-color: #21bb1395;
+    grid-column: 4;
+    grid-row: 1;
+}
+
+.five {
+    color: #ffffff90;
+    background-color: #12c2cf95;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.six {
+    color: #ffffff90;
+    background-color: #125ecf95;
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.seven {
+    color: #ffffff90;
+    background-color: #8312cf95;
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.eight {
+    color: #ffffff90;
+    background-color: #ce169795;
+    grid-column: 4;
+    grid-row: 2;
 }
