--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,12 +15,6 @@ $navBar: #1a466e;
 $background: #d1d1d1;
 $text: #858585;
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 body {
     font-family: 'Roboto Condensed';
     background-color: $background;
@@ -29,10 +23,10 @@ body {
 
 .bg-image {
     background-image: url("../../public/img/background.webp");
-    height: 100%;
-    background-position: center;
+    background-position: center, center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .table {
@@ -48,7 +42,7 @@ th {
 }
 
 .navbar {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .bg-dark-blue {
@@ -68,17 +62,17 @@ h1 {
 }
 
 .wrapper {
-    margin-top: 5rem;
+    margin-top: 3rem;
+    justify-content: center;
     display: grid;
-    grid-gap: 25px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-gap: 30px;
     width: 100%;
 }
 
 .help-button {
     font-size: 25px;
-    display: flex-column;
+    display: flex;
     padding: 3rem;
     color: #00000050;
     width: 100%;
@@ -93,16 +87,12 @@ h1 {
 }
 
 .help-button:hover {
-    box-shadow: 3px;
     background-color: #1a456ee1;
     display: flex;
     padding: 2rem;
     color: #ffffff80;
-    width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
-
 }
 
 .one {
