--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -95,42 +95,42 @@ h1 {
     justify-content: center;
 }
 
-.one {
+.red {
     color: #ffffff90;
     background-color: #c9191995;
     grid-column: 1/4;
     grid-row: 1;
 }
 
-.two {
+.orange {
     color: #ffffff90;
     background-color: #df9e1195;
     grid-column: 2;
     grid-row: 1;
 }
 
-.three {
+.yellow {
     color: #ffffff90;
     background-color: #798b10a1;
     grid-column: 3;
     grid-row: 1;
 }
 
-.four {
+.green {
     color: #ffffff90;
     background-color: #21bb1395;
     grid-column: 4;
     grid-row: 1;
 }
 
-.five {
+.cyan {
     color: #ffffff90;
     background-color: #12c2cf95;
     grid-column: 1;
     grid-row: 2;
 }
 
-.six {
+.blue {
     color: #ffffff90;
     background-color: #125ecf95;
     grid-column: 2;
