Finished helpdesk user indexpage frontend

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -61,9 +61,15 @@ h1 {
     margin-bottom: 0;
 }
 
+.logo-image {
+    height: 2rem;
+    margin-right: 0.2rem;
+}
+
 .wrapper {
     margin-top: 3rem;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: space-evenly;
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
     grid-gap: 30px;
@@ -87,12 +93,13 @@ h1 {
 }
 
 .help-button:hover {
-    background-color: #1a456ee1;
+    background-color: #0e365fbd;
     display: flex;
     padding: 2rem;
-    color: #ffffff80;
+    color: #ffffff;
     align-items: center;
     justify-content: center;
+    box-shadow: 2;
 }
 
 .red {
