--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21319,9 +21319,15 @@ h1, .h1 {
   margin-bottom: 0;
 }
 
+.logo-image {
+  height: 2rem;
+  margin-right: 0.2rem;
+}
+
 .wrapper {
   margin-top: 3rem;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-content: space-evenly;
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
   grid-gap: 30px;
@@ -21344,12 +21350,13 @@ h1, .h1 {
 }
 
 .help-button:hover {
-  background-color: rgba(26, 69, 110, 0.8823529412);
+  background-color: rgba(14, 54, 95, 0.7411764706);
   display: flex;
   padding: 2rem;
-  color: rgba(255, 255, 255, 0.5019607843);
+  color: #ffffff;
   align-items: center;
   justify-content: center;
+  box-shadow: 2;
 }
 
 .red {
