--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21331,19 +21331,21 @@ h1, .h1 {
 
 .wrapper {
   margin-top: 3rem;
-  justify-content: space-evenly;
-  align-content: space-evenly;
+  justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 300px);
-  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-rows: repeat(3, 300px);
+  grid-gap: 25px;
   width: 100%;
 }
 
 .help-button {
+  border: rgba(0, 0, 0, 0.1450980392);
+  border-style: solid;
   font-size: 25px;
   display: flex;
-  padding: 3rem;
-  color: rgba(0, 0, 0, 0.3137254902);
+  padding: 1rem;
+  color: #ffffff;
   width: 100%;
   height: 100%;
   align-items: center;
@@ -21355,6 +21357,8 @@ h1, .h1 {
 }
 
 .help-button:hover {
+  border: rgba(14, 54, 95, 0.9333333333);
+  border-style: solid;
   background-color: rgba(14, 54, 95, 0.7411764706);
   display: flex;
   padding: 2rem;
@@ -21366,56 +21370,49 @@ h1, .h1 {
 
 .red {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(201, 25, 25, 0.5843137255);
+  background-color: rgba(246, 0, 0, 0.5843137255);
   grid-column: 1/4;
   grid-row: 1;
 }
 
 .orange {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(223, 158, 17, 0.5843137255);
+  background-color: rgba(255, 140, 0, 0.5843137255);
   grid-column: 2;
   grid-row: 1;
 }
 
 .yellow {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(121, 139, 16, 0.631372549);
+  background-color: rgba(148, 138, 0, 0.5843137255);
   grid-column: 3;
   grid-row: 1;
 }
 
 .green {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(33, 187, 19, 0.5843137255);
+  background-color: rgba(77, 233, 76, 0.5843137255);
   grid-column: 4;
   grid-row: 1;
 }
 
-.cyan {
+.blue {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(18, 194, 207, 0.5843137255);
+  background-color: rgba(55, 131, 255, 0.5843137255);
   grid-column: 1;
   grid-row: 2;
 }
 
-.blue {
+.purple {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(18, 94, 207, 0.5843137255);
+  background-color: rgba(72, 21, 170, 0.5843137255);
   grid-column: 2;
   grid-row: 2;
 }
 
-.seven {
+.magenta {
   color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(131, 18, 207, 0.5843137255);
+  background-color: rgba(214, 17, 172, 0.5843137255);
   grid-column: 3;
-  grid-row: 2;
-}
-
-.eight {
-  color: rgba(255, 255, 255, 0.5647058824);
-  background-color: rgba(206, 22, 151, 0.5843137255);
-  grid-column: 4;
   grid-row: 2;
 }
