--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21333,8 +21333,7 @@ h1, .h1 {
   margin-top: 3rem;
   justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(3, 300px);
+  grid-template-columns: repeat(auto-fit, 350px);
   grid-gap: 25px;
   width: 100%;
 }
@@ -21342,12 +21341,12 @@ h1, .h1 {
 .help-button {
   border: rgba(0, 0, 0, 0.1450980392);
   border-style: solid;
-  font-size: 25px;
+  font-size: 30px;
   display: flex;
-  padding: 1rem;
+  padding: 2rem;
   color: #ffffff;
   width: 100%;
-  height: 100%;
+  height: 350px;
   align-items: center;
   justify-content: center;
 }
@@ -21361,7 +21360,7 @@ h1, .h1 {
   border-style: solid;
   background-color: rgba(14, 54, 95, 0.7411764706);
   display: flex;
-  padding: 2rem;
+  padding: 5rem;
   color: #ffffff;
   align-items: center;
   justify-content: center;
@@ -21371,48 +21370,34 @@ h1, .h1 {
 .red {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(246, 0, 0, 0.5843137255);
-  grid-column: 1/4;
-  grid-row: 1;
 }
 
 .orange {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(255, 140, 0, 0.5843137255);
-  grid-column: 2;
-  grid-row: 1;
 }
 
 .yellow {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(148, 138, 0, 0.5843137255);
-  grid-column: 3;
-  grid-row: 1;
 }
 
 .green {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(77, 233, 76, 0.5843137255);
-  grid-column: 4;
-  grid-row: 1;
 }
 
 .blue {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(55, 131, 255, 0.5843137255);
-  grid-column: 1;
-  grid-row: 2;
 }
 
 .purple {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(72, 21, 170, 0.5843137255);
-  grid-column: 2;
-  grid-row: 2;
 }
 
 .magenta {
   color: rgba(255, 255, 255, 0.5647058824);
   background-color: rgba(214, 17, 172, 0.5843137255);
-  grid-column: 3;
-  grid-row: 2;
 }
