--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,8 +75,7 @@ h1 {
   margin-top: 3rem;
   justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(3, 300px);
+  grid-template-columns: repeat(auto-fit, 350px);
   grid-gap: 25px;
   width: 100%;
 }
@@ -84,12 +83,12 @@ h1 {
 .help-button {
   border: #00000025;
   border-style: solid;
-  font-size: 25px;
+  font-size: 30px;
   display: flex;
-  padding: 1rem;
+  padding: 2rem;
   color: #ffffff;
   width: 100%;
-  height: 100%;
+  height: 350px;
   align-items: center;
   justify-content: center;
 
@@ -104,7 +103,7 @@ h1 {
   border-style: solid;
   background-color: #0e365fbd;
   display: flex;
-  padding: 2rem;
+  padding: 5rem;
   color: #ffffff;
   align-items: center;
   justify-content: center;
@@ -114,48 +113,34 @@ h1 {
 .red {
   color: #ffffff90;
   background-color: #F6000095;
-  grid-column: 1/4;
-  grid-row: 1;
 }
 
 .orange {
   color: #ffffff90;
   background-color: #FF8C0095;
-  grid-column: 2;
-  grid-row: 1;
 }
 
 .yellow {
   color: #ffffff90;
   background-color: #948a0095;
-  grid-column: 3;
-  grid-row: 1;
 }
 
 .green {
   color: #ffffff90;
   background-color: #4DE94C95;
-  grid-column: 4;
-  grid-row: 1;
 }
 
 .blue {
   color: #ffffff90;
   background-color: #3783FF95;
-  grid-column: 1;
-  grid-row: 2;
 }
 
 .purple {
   color: #ffffff90;
   background-color: #4815AA95;
-  grid-column: 2;
-  grid-row: 2;
 }
 
 .magenta {
   color: #ffffff90;
   background-color: #d611ac95;
-  grid-column: 3;
-  grid-row: 2;
 }
